--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
             <textPath style="font-family: fantasy;" xlink:href="#partialPath" startOffset="12">
                 🌹Happy Women's Day
                 🌹.........................................................................................................................................🌹From
-                With Love 20/10!🌹
+                Beo With Love 🌹
             </textPath>
         </text>
 
@@ -1109,7 +1109,7 @@
         // .textLetter text h2
         let indexText = 0;
         let textLetter = document.querySelector('.textLetter h2');
-        const textLetterH2 = "Gửi mẹ Beo!";
+        const textLetterH2 = "Gửi mẹ Beo iuuu";
         let timoutTextLetter;
 
         function textCharLetter() {
@@ -1137,7 +1137,7 @@
         // chữ của thư bạn muốn gửi
         let indexTextContent = 0;
         let textLetterContent = document.querySelector('.contentLetter');
-        const textLetterP = "Hôm nay là ngày 20/10 anh chúc em luôn hạnh phúc và gặp nhiều may mắn trong cuộc sống nhá. Hãy luôn giữ mãi nụ cười trên môi nhá và đừng suy nghĩ nhiều về những thứ không đáng nha";
+        const textLetterP = "Hôm nay là ngày 20/10 anh chúc em luôn hạnh phúc và gặp nhiều may mắn trong cuộc sống. Đừng đòi quà nữa nhaaaa";
         let timoutTextLetterContent;
         function textCharLetterContent() {
             if (indexTextContent < textLetterP.length) {
